Fix/content-visibility (#4)
* fix viewport for iphone

* fixing viewport

* fix gradient rendering

* use signal for year

* revert fix scrolling

* improve home background image

* optimize blur

* Revert "optimize blur"

This reverts commit 985136ef563e27ea7dde7000dd1d5df1f159c73f.

* remove content-visibility

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -240,9 +240,6 @@
   transform: translateZ(0);
   -webkit-transform: translateZ(0);
   contain: layout style paint;
-  // Use content-visibility for cards below the fold
-  content-visibility: auto;
-  contain-intrinsic-size: auto 500px;
 }
 
 .content-with-image {
